--- a/file-secure/package.json
+++ b/file-secure/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "firebase": "^8.3.2",
+    "hybrid-crypto-js": "^0.2.4",
     "node-rsa": "^1.1.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
