--- a/file-secure/package.json
+++ b/file-secure/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "crypto-js": "^4.0.0",
     "firebase": "^8.3.2",
     "hybrid-crypto-js": "^0.2.4",
     "js-file-download": "^0.4.12",
